--- a/src/JsMinifier/JsMinifier.SampleWeb/Web.config
+++ b/src/JsMinifier/JsMinifier.SampleWeb/Web.config
@@ -6,6 +6,15 @@
   -->
 
 <configuration>
+	<configSections>
+		<section name="JsMinifier" type="JsMinifier.Handler.Configuration.JsMinifierConfiguration, JsMinifier.Handler"/>
+	</configSections>
+
+	<JsMinifier Cache="false">
+		<Excludes>
+			<Path>/Umbraco</Path>
+		</Excludes>
+	</JsMinifier>
     <system.web>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
