Added so it always excludes .min. js files

--- a/src/JsMinifier/JsMinifier.SampleWeb/Web.config
+++ b/src/JsMinifier/JsMinifier.SampleWeb/Web.config
@@ -12,7 +12,7 @@
 
 	<JsMinifier Cache="false">
 		<Excludes>
-			<Path>/Umbraco</Path>
+			<Path>.m.</Path>
 		</Excludes>
 	</JsMinifier>
     <system.web>
