--- a/src/JsMinifier/JsMinifier.SampleWeb/Web.config
+++ b/src/JsMinifier/JsMinifier.SampleWeb/Web.config
@@ -10,7 +10,7 @@
 		<section name="JsMinifier" type="JsMinifier.Handler.Configuration.JsMinifierConfiguration, JsMinifier.Handler"/>
 	</configSections>
 
-	<JsMinifier Cache="false">
+	<JsMinifier Cache="True">
 		<Excludes>
 			<Path>.m.</Path>
 		</Excludes>
